envoy.yaml
static_resources:
  listeners:
    -
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        -
          filters:
            -
              name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                http_filters:
                  -
                    name: envoy.router
                route_config:
                  name: route
                  virtual_hosts:
                    -
                      name: web_service
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: web_cluster
  clusters:
    -
      name: web_cluster
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: web_cluster
        endpoints:
          -
            lb_endpoints:
              -
                endpoint:
                  address:
                    socket_address:
                      address: web1
                      port_value: 80
              -
                endpoint:
                  address:
                    socket_address:
                      address: web2
                      port_value: 80
